# databaseListener

./: .gitignore  DBSyncService.py  LICENSE  Makefile  README.md  api.sql.json  docker-compose.yml  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
docker/: .dockerignore  Dockerfile
listen/: listen.py  settings.py  utils.py
migration_script/: compare_db.py  convert_encode.py  postgresql2mysql.py
migration_script/db_utils_json/: new_db_structure.json  new_db_structure_only_special_list.json  new_db_structure_without_proposal.json  removed_fields.json  table_name_translation.json
scripts/: compare_db.py
scripts/migration/: convert_encode.py  script.py
scripts/migration/db_data/: Instrucoes_banco.txt  Untitled-1.json  Untitled-2.json  field_name_translation.json  new_db_only_proposal_coverage.json  new_db_proposal_coverage.json  new_db_structure.json  old_db_structure.json  removed_fields.json  table_name_translation.json
sync_db/: padrão_mapeamento.json
