[tool.poetry]
name = "databaselistener"
version = "0.1.0"
description = ""
authors = ["Danilo Nascimento <daconnas.dcn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mysqlclient = "^2.1.1"
ipdb = "^0.13.13"
psycopg2 = "^2.9.6"
psycopg2-binary = "^2.9.6"
typer = "^0.7.0"
rich = "^13.3.3"
python-decouple = "^3.8"
aiopg = "^1.4.0"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
